<resources>
    <string name="app_name">P2P parking</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="prompt_password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_input">The input provided is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register_user">Register</string>
    <string name="activity_register_user">Register user</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_surname">Surname</string>
    <string name="prompt_last_name">Last name</string>

    <string name="prompt_country">Country</string>
    <string name="prompt_contact_number">Contact number</string>
    <string name="prompt_date_of_birth">Press to select date of birth</string>
    <string name="activity_map">Parking spots</string>
    <string name="search_hint">Where are you going?</string>
    <string name="activity_search">Search</string>
    <string name="activity_choose_parking_spot">Choose parking spot</string>
    <string name="activity_book_parking_spot">Book</string>
    <string name="prompt_from_date">From</string>
    <string name="prompt_to_date">To</string>
    <string name="book_parking_spot">Book</string>
    <string name="activity_reciept">Receipt</string>
    <string name="title_reciept">Successfully booked</string>
    <string name="content_reciept" formatted="false">You have successfully booked</string>
    <string name="ok">OK</string>
    <string name="search_empty_state">No results found</string>
    <string name="activity_login">Log in</string>

    <string name="bottom_navigation_map">Map</string>
    <string name="bottom_navigation_favorites">Favorites</string>
    <string name="bottom_navigation_profile">Profile</string>
    <string name="profile">My profile</string>
    <string name="my_cars">My cars</string>
    <string name="edit_profile">Edit profile</string>
    <string name="activity_my_cars">My cars</string>
    <string name="prompt_registration_number">Registration number</string>
    <string name="car_added">Car added!</string>
    <string name="car_defaulted">Car defaulted</string>
    <string name="bottom_navigation_trips">Trips</string>

    <!--Months and days -->
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="oktober">Oktober</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="morning">Morning</string>
    <string name="after_noon">After noon</string>


    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">p2p-parking update</string>
    <string name="select_country">Select country</string>
    <string name="click_here"><u>Click here</u></string>
    <string name="cancel">Cancel</string>
    <string name="update_your_info">Update your info</string>
    <string name="prompt_repeat_password">Repeat password</string>
    <string name="prompt_username">Username</string>
    <string name="unable_to_connect_to_server">Unable to connect server</string>
    <string name="your_usertype">Your usertype</string>
    <string name="driver">Driver</string>
    <string name="owner">Owner</string>
    <string name="health">Health</string>
    <string name="normal">Normal</string>
    <string name="electrical">Electrical</string>
    <string name="handicap">Handicap</string>
    <string name="your_gender">Your gender</string>
    <string name="disabilities">Disabilities</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="none">None</string>
    <string name="wheelchair">Wheelchair</string>
    <string name="handicap_parking_permission">Handicap parking permission</string>
    <string name="i_have_a_valid_parking">I have a valid parking permission</string>
    <string name="your_birthday">Your birthday</string>
    <string name="home">Home</string>
    <string name="view_profile">View profile</string>
    <string name="logout">Logout</string>
    <string name="registered_vehicles">Registered vehicles</string>
    <string name="my_bookings">My bookings</string>
    <string name="add_new_location">Add new location</string>
    <string name="enter_location_description">Enter location description</string>
    <string name="add_vehicle">Add vehicle</string>
    <string name="vehicle_info">Vehicle info</string>
    <string name="car">Car</string>
    <string name="van">Van</string>
    <string name="bike">Bike</string>
    <string name="bluelight">Bluelight</string>
    <string name="description">Description</string>
    <string name="reg_no">Reg. no. (If applicable)</string>
    <string name="extended_vehicle_info">Extended vehicle info</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="register_vehicle">Register vehicle</string>
    <string name="brand">Brand</string>
    <string name="model_name">Model name</string>
    <string name="mfg_year">Mfg year</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="parking_preferences">Parking preferences</string>
    <string name="set_as_default_vehicle">Set as default vehicle</string>
    <string name="booked_on">Booked on</string>
    <string name="booking_type">Booking type</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="prompt_mobile">Mobile (must be a valid number)</string>
    <string name="label_tnc">I have read, understood and agree with the person and privacy policy</string>
    <string name="register">Register</string>
    <string name="logo_transition">logoTransition</string>
    <string name="login_button_transition">loginButtonTransition</string>
    <string name="error_msg_no_internet">Device is offline, please connect to internet.</string>
    <string name="error_msg_generic">Something went wrong, retry later.</string>
    <string name="error_msg_cannot_connect">Cannot connect to server, try again later.</string>
    <string name="error_msg_server_error">Request failed due to server error.</string>

    <string name="dialog_action_okay">Okay</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="dialog_action_exit">Exit</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_confirmation">Confirmation</string>
    <string name="dialog_title_info">Information</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="full_name">Full name</string>

    <string name="next">Next</string>
    VehicleListModule
    <string name="edit_user_error">Please provide your info before continuing</string>


    <string name="parking_permit_error">You need a valid parking permit to continue</string>

    <string name="vehicle_list">Vehicle List</string>

    <string name="save_vehicle">Save vehicle</string>
    <string name="number_plate_label">Number plate (if applicable)</string>
    <string name="motorbike">Motorbike</string>
    <string name="emergency">Emergency</string>
    <string name="places">Places</string>
    <string name="progress">Progress</string>
    <string name="settings">Settings</string>
    <string name="begin_visit">Begin Visit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="current_location">Current Location</string>
    <string name="route_updated_prompt">Your driving route has been updated from the web panel, would you like to apply the new addresses?</string>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="user_roles">
        <item>Driver</item>
        <item>Owner</item>
        <item>Medical</item>
    </string-array>
    <string-array name="vehicle_fuel">
        <item>octane_95</item>
        <item>octane_98</item>
        <item>diesel</item>
        <item>EV</item>
        <item>Hydrogen</item>
        <item>Unknown</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="edit_user_titles">
        <item>Role</item>
        <item>Body</item>
        <item>Info</item>
    </string-array>

    <string-array name="logs_titles">
        <item>Visits</item>
        <item>Parking sites</item>
        <item>Cost</item>
    </string-array>
</resources>
