<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_navigation_map"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/bottom_navigation_map" />

    <item
        android:id="@+id/bottom_navigation_trips"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:title="@string/bottom_navigation_trips" />

    <item
        android:id="@+id/bottom_navigation_favorites"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/bottom_navigation_favorites" />
    <item
        android:id="@+id/bottom_navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/bottom_navigation_profile" />

</menu>