<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_title_reciept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/title_reciept"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_view_confirmed"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="54dp"
        android:layout_marginTop="51dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_content_reciept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_view_title_reciept"
        app:srcCompat="@drawable/ic_check_black_24dp"
        app:tint="@android:color/holo_green_light" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/text_view_content_reciept"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="163dp"
        android:text="@string/content_reciept"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_ok_reciept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin_double"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_content_reciept" />

</android.support.constraint.ConstraintLayout>